the best theme ever

--- a/layout/_partial/article.ejs
+++ b/layout/_partial/article.ejs
@@ -90,7 +90,8 @@
 
 <% if(theme.reward){%>
 <p>
-    <a  class="dashang" onclick="dashangToggle()">赏</a>
+    <a  class="dashang" >..</a>
+    <!--class="dashang" onclick="dashangToggle()"-->
 </p>
 <%}%>
 <%- partial('_partial/article_copyright')%>
