--- a/layout/_partial/article_copyright.ejs
+++ b/layout/_partial/article_copyright.ejs
@@ -7,7 +7,7 @@
     <p><span class="copy-title">Latest update:</span><%= post.updated.format("YYYY-MM-DD, HH:mm:ss") %></p>
     <span class="copy-title">Original Link:</span><a class="post-url" href="<%- url_for(post.path) %>" title="<%= post.title %>"><%= post.permalink %></a>
     <p>
-        <span class="copy-title">Copyright notice:</span><i class="fa fa-creative-commons"></i> <a rel="license" href="http://creativecommons.org/licenses/by-nc-sa/4.0/" title="CC BY-NC-SA 4.0 International" target = "_blank">"署名-非商用-相同方式共享 4.0"</a> 转载请保留原文链接及作者。
+        <span class="copy-title">Copyright notice:</span><i class="fa fa-creative-commons"></i> <a rel="license" href="http://creativecommons.org/licenses/by-nc-sa/4.0/" title="CC BY-NC-SA 4.0 International" target = "_blank">"CC BY-NC-SA 4.0"</a> keep the original link and author.
     </p>
 </div>
 <% } %>
