--- a/layout/index.ejs
+++ b/layout/index.ejs
@@ -31,7 +31,8 @@
         </article>
         <% if(theme.reward){%>
         <p>
-            <a  class="dashang" onclick="dashangToggle()">赏</a>
+            <a  class="dashang" >..</a>
+            <!--class="dashang" onclick="dashangToggle()"-->
         </p>
         <%}%>
         <%- partial('_partial/comment', {post: {comments: true}, index: false})%>
