sidebar no animation, etc

--- a/layout/_partial/nav-left.ejs
+++ b/layout/_partial/nav-left.ejs
@@ -49,7 +49,7 @@ if (theme.category && theme.category.sub) {
                 <% if (childCategory[category._id]) {%>
                     <ul class="sub hide">
                         <% childCategory[category._id].forEach(function (child) { %>
-                        <li><div data-rel="<%=child.name%>"><% if (childCategory[child._id]) {%><i class="fold iconfont icon-right"></i><% } %><%=child.name%><% if (theme.category && theme.category.num) { %><small>(<%= child.posts.length %>)</small><%}%></div>
+                        <li><div data-rel="<%=child.name%>"><% if (childCategory[child._id]) {%><i class="fold iconfont icon-right"></i><% } %><%=child.name%><% if (theme.category && theme.category.num) { %><small class="badge3"data-badge3="<%= child.posts.length %>"> </small><%}%></div>
                             <% if (childCategory[child._id]) {%>
                                 <ul class="sub hide">
                                     <% childCategory[child._id].forEach(function (child2) { %>
