change font all

--- a/source/css/mobile.styl
+++ b/source/css/mobile.styl
@@ -1,6 +1,6 @@
 @media screen and (max-width 1468px)
   html, body
-    font 400 15px/1 "Open Sans", "Hiragino Sans GB", sans-serif
+    font 400 15px/1 Fira Sans,Ubuntu,-apple-system,BlinkMacSystemFont,Segoe UI,Helvetica,Arial,sans-serif,Apple Color Emoji,Segoe UI Emoji,Segoe UI Symbol
   .nav
     width 492px
     &.fullscreen
@@ -22,7 +22,7 @@
             top 9px
         nav a
           .post-title
-            font-size 13px
+            font-size 16px
           .post-date
             font-size 14px
     .hide-list
@@ -30,7 +30,7 @@
       &.fullscreen
         left 0
   .post
-    font-size 13px
+    font-size 16px
     .pjax
       max-width 780px
 
