--- a/source/css/_partial/post.styl
+++ b/source/css/_partial/post.styl
@@ -1,6 +1,6 @@
 .post
   height 100%
-  font-size 13px
+  font-size 16px
   line-height 1.6
   background white
   overflow-x hidden
@@ -50,7 +50,7 @@
           a
             cursor pointer
             color inherit
-            font 400 15px/1 "Open Sans", "Hiragino Sans GB", sans-serif
+            font 400 15px/1 Fira Sans,Ubuntu,-apple-system,BlinkMacSystemFont,Segoe UI,Helvetica,Arial,sans-serif,Apple Color Emoji,Segoe UI Emoji,Segoe UI Symbol
             &:hover
               color: #4078c0
         .top
@@ -165,7 +165,7 @@
           border-bottom 1px solid #d9d9d9
           padding 10px 30px
           color #969696
-          font-family  "Open Sans","Hiragino Sans GB",sans-serif
+          font-family  Fira Sans,Ubuntu,-apple-system,BlinkMacSystemFont,Segoe UI,Helvetica,Arial,sans-serif,Apple Color Emoji,Segoe UI Emoji,Segoe UI Symbol
           display inline-block
       blockquote
         padding 20px
