--- a/source/css/style.styl
+++ b/source/css/style.styl
@@ -5,7 +5,7 @@ html, body
   height 100%
   margin 0
   color #283444
-  font 400 16px/1 "Open Sans","Hiragino Sans GB",sans-serif
+  font 400 16px/1 Fira Sans,Ubuntu,-apple-system,BlinkMacSystemFont,Segoe UI,Helvetica,Arial,sans-serif,Apple Color Emoji,Segoe UI Emoji,Segoe UI Symbol
   -webkit-font-smoothing subpixel-antialiased
   -webkit-text-size-adjust none
   overflow hidden
