--- a/source/css/_partial/nav-left.styl
+++ b/source/css/_partial/nav-left.styl
@@ -99,7 +99,7 @@
         &.active
           color #020202
           box-shadow inset 165px 0 0 #B8B8B8
-          border-left: solid 3px #F7F7F7;
+          border-left: solid 3px #B8B8B8;
           /*padding-left 20px
           position relative*/
         &>.fold
