--- a/source/css/_partial/post.styl
+++ b/source/css/_partial/post.styl
@@ -297,7 +297,7 @@
     a
       color #4078c0
       word-break break-all
-      font-family sans-serif
+      font-family BlinkMacSystemFont, -apple-system, "Segoe UI", "Roboto", "Oxygen", "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue", "Helvetica", "Arial", sans-serif;
       &:hover
         text-decoration underline
   .article_copyright
@@ -305,10 +305,11 @@
     margin-bottom 20px
     background-color #83b3c1
     border-radius 8px
+    font-family BlinkMacSystemFont, -apple-system, "Segoe UI", "Roboto", "Oxygen", "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue", "Helvetica", "Arial", sans-serif;
     font-weight 700
     line-height 22px
     color #444
-    font-size 16px
+    font-size 14px
     .copy-title
       color: #000
       margin-right: 10px
@@ -317,7 +318,7 @@
     a
       color #595f67
       word-break break-all
-      font-family sans-serif
+      font-family BlinkMacSystemFont, -apple-system, "Segoe UI", "Roboto", "Oxygen", "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue", "Helvetica", "Arial", sans-serif;
       &:hover
         text-decoration underline
 
