--- a/source/css/_partial/post.styl
+++ b/source/css/_partial/post.styl
@@ -238,12 +238,12 @@
       /* Inline code */
       :not(pre) > code
         color #BF1827
-        font-family sans-serif
+        font-family 'Fira Code', 'TypoPRO Fantasque Sans Mono', 'Roboto Mono', 'Ubuntu Mono', monospace;
       pre.mermaid
         border none
         text-align center
       pre > code
-        font-size 15px
+        font-size 13px
         border-radius 3px
         /* 滚动条 */
         &::-webkit-scrollbar-thumb:horizontal  /*水平滚动条的样式*/
