div.ac > ul > li font

--- a/source/css/_partial/autocomplete.styl
+++ b/source/css/_partial/autocomplete.styl
@@ -19,7 +19,7 @@ div.ac > ul > li {
   list-style-type: none;
   background-color: white;
   word-break: break-all;
-  font-family: helvetica, arial, "Courier New", sans-serif;
+  font-family: Fira Sans,Ubuntu,-apple-system,BlinkMacSystemFont,Segoe UI,Helvetica,Arial,sans-serif,Apple Color Emoji,Segoe UI Emoji,Segoe UI Symbol
 }
 
 div.ac > ul > li > div {
