--- a/layout/_partial/header.ejs
+++ b/layout/_partial/header.ejs
@@ -6,6 +6,7 @@
     <%- fragment_cache('meta', function(){
       return partial('_partial/meta');
     }) %>
+  <link href="https://fonts.googleapis.com/css?family=Fira+Sans" rel="stylesheet">
 </head>
 <div style="display: none">
   <input class="theme_disqus_on" value="<%=(theme.comment.type=='disqus')%>">
