--- a/source/css/_partial/post.styl
+++ b/source/css/_partial/post.styl
@@ -146,7 +146,7 @@
       a
         color #4078c0
         word-break break-all
-        font-family sans-serif
+        font-family Fira Sans,Ubuntu,-apple-system,BlinkMacSystemFont,Segoe UI,Helvetica,Arial,sans-serif,Apple Color Emoji,Segoe UI Emoji,Segoe UI Symbol
         &:hover
           text-decoration underline
       .div_img,figure
