--- a/layout/_partial/copyright.ejs
+++ b/layout/_partial/copyright.ejs
@@ -1,2 +1,2 @@
 <p class="footer-entry"><%if(theme.bottom_text){%><%=theme.bottom_text%><%} else {%>©2017 <%=config.author%><%}%></p>
-<p class="footer-entry"><a href="https://hexo.io/" target="_blank">a fast blog framework created with nodejs </a></p>
+<p class="footer-entry">log archive by <a href="https://bimscwit.netlify.app" target="_blank">bimscwit</a> | made using <a href="https://hexo.io/" target="_blank">hexo.io</a></p>
