local search new: remove padding left in list result

--- a/source/css/style.styl
+++ b/source/css/style.styl
@@ -144,7 +144,7 @@ img.pswp__img
 }
 
 ul.search-new-result-list {
-  padding-left: 10px;
+  /*padding-left: 10px;*/
 }
 
 a.search-new-result-title {
