--- a/source/css/style.styl
+++ b/source/css/style.styl
@@ -189,15 +189,20 @@ em.search-new-keyword {
   *zoom: 1;
 }
 
-
 /**
- * Local search box
+ * Fuckin Local search box
  */
 .set .search .search-input {width: 100%;height: 42px;background: transparent;border: 0px;border-bottom:2px solid #6558BC;font-size:20px;padding-top: 20px;}
 .set .search .search-input[type=text]:focus{outline: none;border: 0px;border-bottom:2px solid #6558BC;}
 .set .search .search-keyword {background:yellow;padding:2px auto 2px;}
 .set .search li {list-style: none; margin: 0;border-bottom:1px dashed #E3E3E3;}
+/**
+ * END Fukin Local search box
+ */
 
+/**
+ * Local search box
+ */
 *, *::after, *::before {
   box-sizing: border-box;
 }
