--- a/source/css/_partial/nav-right.styl
+++ b/source/css/_partial/nav-right.styl
@@ -68,6 +68,29 @@
             -webkit-transition left .2s
             transition left .2s
             cursor pointer
+
+        #fuckinswitch
+          &:checked +#fuckinWitchIcon:before
+            border-color #64bd63
+            box-shadow inset 0 0 0 0.16rem #64bd63
+            background-color #64bd63
+            -webkit-transition border .4s,box-shadow .4s,background-color 1.2s
+            transition border .4s,box-shadow .4s,background-color 1.2s
+          &:checked +#fuckinWitchIcon:after
+            left 27px
+            content ''
+            width 14px
+            height 14px
+            position absolute
+            top 10px
+            -webkit-transform translateY(-50%)
+            border-radius 100%
+            background-color #91c0f1
+            box-shadow 0 1px 1px rgba(0,0,0,.4)
+            -webkit-transition left .2s
+            transition left .2s
+            cursor pointer
+
         #tagsWitchIcon
           width 40px
           height 14px
@@ -117,7 +140,121 @@
             transition: border 0.4s, box-shadow 0.4s, -webkit-box-shadow 0.4s;
             background-clip: content-box;
           }
+
+        #fuckinWitchIcon
+          width 40px
+          height 14px
+          position relative
+          z-index 2
+          border 0
+          background 0 0
+          -webkit-appearance none
+          outline 0
+          &:after{
+            left: 0;
+            content: '';
+            width: 14px;
+            height: 14px;
+            position: absolute;
+            top: 10px;
+            -webkit-transform: translateY(-50%);
+            border-radius: 100%;
+            background-color: #91c0f1;
+            -webkit-box-shadow: 0 1px 1px rgba(0,0,0,0.4);
+            box-shadow: 0 1px 1px rgba(0,0,0,0.4);
+            -webkit-transition: left 0.2s;
+            -o-transition: left 0.2s;
+            transition: left 0.2s;
+            cursor: pointer;
+          }
+          &:before {
+            content: '';
+            width: 40px;
+            height: 14px;
+            border: 1px solid #bdcabc;
+            background-color: #fdfdfd;
+            border-radius: 20px;
+            cursor: pointer;
+            display: inline-block;
+            position: relative;
+            vertical-align: middle;
+            -webkit-box-sizing: content-box;
+            box-sizing: content-box;
+            -webkit-box-shadow: inset 0 0 0 0 #dfdfdf;
+            box-shadow: inset 0 0 0 0 #dfdfdf;
+            -webkit-transition: border 0.4s, box-shadow 0.4s;
+            -webkit-transition: border 0.4s, -webkit-box-shadow 0.4s;
+            transition: border 0.4s, -webkit-box-shadow 0.4s;
+            -o-transition: border 0.4s, box-shadow 0.4s;
+            transition: border 0.4s, box-shadow 0.4s;
+            transition: border 0.4s, box-shadow 0.4s, -webkit-box-shadow 0.4s;
+            background-clip: content-box;
+          }
+          
     .tags-list
+      display none
+      margin 15px 10px 15px
+      padding 10px
+      float left
+      background #f1f1f1
+      border-radius 25px
+      list-style none outside none
+      position absolute
+      top 65px
+      width 100%
+      li
+        float left
+        a
+          height 18px
+          line-height 18px
+          font-size 17px
+          float left
+          padding 0 5px 0 10px
+          color #fff
+          position relative
+          border-radius 0 5px 5px 0
+          margin 5px 9px 5px 8px
+          &:before
+            content " "
+            width 0
+            height 0
+            position absolute
+            top 0
+            left -18px
+            border 9px solid transparent
+            border-right-color #d0d0d0
+          &:after
+            content " "
+            width 4px
+            height 4px
+            background-color #fff
+            border-radius 4px
+            box-shadow 0 0 0 1px rgba(0,0,0,.3)
+            position absolute
+            top 7px
+            left 2px
+          &.color1
+            background  #FF945C
+            &:before
+              border-right-color #FF945C
+          &.color2
+            background  #cc8167
+            &:before
+              border-right-color #cc8167
+          &.color3
+            background  #BA8F6C
+            &:before
+              border-right-color #BA8F6C
+          &.color4
+            background #94635c
+            &:before
+              border-right-color#94635c
+          &.color5
+            background #7B5D5F
+            &:before
+              border-right-color#7B5D5F
+
+    .fuckin-list
       display none
       margin 15px 10px 15px
       padding 10px
