merapihkan fucking local search (in nav-right)

--- a/source/css/_partial/nav-right.styl
+++ b/source/css/_partial/nav-right.styl
@@ -273,7 +273,7 @@
           font-size 17px
           float left
           padding 0 5px 0 10px
-          color #fff
+          color #4078C0
           position relative
           border-radius 0 5px 5px 0
           margin 5px 9px 5px 8px
