--- a/source/css/style.styl
+++ b/source/css/style.styl
@@ -136,6 +136,8 @@ img.pswp__img
 
 
 #local-search-new-result {
+  width 26em
+  height 20em
   scroll:auto;
   overflow:auto;
   max-height:3in;
@@ -144,7 +146,7 @@ img.pswp__img
 }
 
 ul.search-new-result-list {
-  /*padding-left: 10px;*/
+  padding-left: 10px;
 }
 
 a.search-new-result-title {
@@ -192,10 +194,29 @@ em.search-new-keyword {
 /**
  * Fuckin Local search box
  */
-.set .search .search-input {width: 100%;height: 42px;background: transparent;border: 0px;border-bottom:2px solid #6558BC;font-size:20px;padding-top: 20px;}
-.set .search .search-input[type=text]:focus{outline: none;border: 0px;border-bottom:2px solid #6558BC;}
-.set .search .search-keyword {background:yellow;padding:2px auto 2px;}
-.set .search li {list-style: none; margin: 0;border-bottom:1px dashed #E3E3E3;}
+.set .search .search-input {
+  width: 100%;
+  height: 42px;
+  background: transparent;
+  border: 0px;
+  border-bottom:
+  2px solid #91c0f1;
+  font-size:16px;
+  padding-top: 20px;}
+.set .search .search-input[type=text]:focus{
+  outline: none;
+  border: 0px;
+  border-bottom:2px solid #91c0f1;
+  }
+.set .search .search-keyword {
+  background:yellow;
+  padding:2px auto 2px;
+  }
+.set .search li {
+  list-style: none; 
+  margin: 0;
+  border-bottom:1px dashed #E3E3E3;
+  }
 /**
  * END Fukin Local search box
  */
