merapihkan fucking local search (in nav-right)

--- a/layout/_partial/fuckin.ejs
+++ b/layout/_partial/fuckin.ejs
@@ -2,7 +2,7 @@
     <li class="article-tag-list-item">
         <div class="set">
             <div id="site_search" class="search">
-                <input type="text" id="local-search-new-input" class="search-input" placeholder="looking for what？" />
+                <input type="text" id="local-search-new-input" class="search-input" placeholder="Type something..." />
                 <div id="local-search-new-result" class="local-search-new-result"></div>
             </div>
         </div>
