--- a/source/css/style.styl
+++ b/source/css/style.styl
@@ -141,7 +141,6 @@ img.pswp__img
   scroll:auto;
   overflow:auto;
   max-height:3in;
-  background-color: #fef;
   margin-bottom: 50px;
 }
 
@@ -150,11 +149,13 @@ ul.search-new-result-list {
 }
 
 a.search-new-result-title {
-  font-weight: bold;
+  font-size: 14px;
 }
 
 p.search-new-result {
-  color=#555;
+  color: #555;
+  font-size: 13px;
+  padding 15px
 }
 
 em.search-new-keyword {
@@ -195,6 +196,7 @@ em.search-new-keyword {
  * Fuckin Local search box
  */
 .set .search .search-input {
+  margin-top -10em
   width: 100%;
   height: 42px;
   background: transparent;
@@ -204,6 +206,7 @@ em.search-new-keyword {
   font-size:16px;
   padding-top: 20px;}
 .set .search .search-input[type=text]:focus{
+  margin-top -10em
   outline: none;
   border: 0px;
   border-bottom:2px solid #91c0f1;
@@ -213,6 +216,7 @@ em.search-new-keyword {
   padding:2px auto 2px;
   }
 .set .search li {
+  background #ffffff
   list-style: none; 
   margin: 0;
   border-bottom:1px dashed #E3E3E3;
