--- a/source/css/_partial/nav-right.styl
+++ b/source/css/_partial/nav-right.styl
@@ -276,6 +276,7 @@
           position relative
           border-radius 0 5px 5px 0
           margin 5px 9px 5px 8px
+          white-space pre
           &:before
             content "\00BB"
             width 0
