--- a/source/css/style.styl
+++ b/source/css/style.styl
@@ -223,3 +223,70 @@ em.search-new-keyword {
 /**
  * END Fukin Local search box
  */
+
+ /**
+ * Accordion
+ */
+ ul {
+	margin-left: 0;
+	padding: 0;
+  font-family: 'Karla', sans-serif;
+}
+
+.question,
+.answer {
+	list-style-type: none;
+}
+
+.question {
+	padding: 0.5em 1em 0.5em 3em;
+	font-weight: bold;
+	position: relative;
+}
+
+.question:hover {
+	cursor: pointer;
+}
+
+.answer {
+	display: none;
+	padding: 1em 0.5em 2.5em;
+}
+
+.expand-bar {
+	position: absolute;
+	top: 50%;
+	left: 1em;
+	transition: all 0.5s ease;
+}
+
+.expand-bar,
+.expand-bar:after {
+	width: 15px;
+	height: 2px;
+	background-color: #42b983;
+}
+
+.expand-bar:after {
+	content: "";
+	position: absolute;
+	left: 0;
+	top: 0;
+	transform: rotate(90deg);
+	transition: all 0.5s ease;
+}
+
+.open {
+	border-bottom: none;
+}
+
+.open .expand-bar {
+	transform: rotate(180deg);
+}
+
+.open .expand-bar:after {
+	transform: rotate(180deg);
+}
+ /**
+ * END Accordion
+ */
